force-app/main/default/objects/ppmail__Service_Sender_Junction__mdt/ppmail__Service_Sender_Junction__mdt.object-meta.xml
<CustomObject>
    <label>Service Sender Junction</label>
    <pluralLabel>Service Sender Junctions</pluralLabel>
</CustomObject>