force-app/main/default/objects/ppmail__Service_Sender_Junction__mdt/fields/ppmail__Active__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>