force-app/main/default/objects/ppmail__Service_Sender_Junction__mdt/fields/ppmail__Mail_Sender__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Sender__c</fullName>
    <label>Mail Sender</label>
    <referenceTo>ppmail__Mail_Sender__mdt</referenceTo>
    <relationshipLabel>Mail Services</relationshipLabel>
    <relationshipName>Service_Sender_Junctions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>