force-app/main/default/objects/ppmail__Service_Sender_Junction__mdt/fields/ppmail__Mail_Service__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Service__c</fullName>
    <label>Mail Service</label>
    <referenceTo>ppmail__Mail_Service__mdt</referenceTo>
    <relationshipLabel>Mail Senders</relationshipLabel>
    <relationshipName>Service_Sender_Junctions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>